# tensor-decomposition

./: README.md  complex_train.py  pyproject.toml  real_train.py  train.py
configs/: README.md  complex_default.yaml  complex_small.yaml  real_default.yaml  real_small.yaml
src/: checkpoints.py  evaluation.py  losses.py  model.py  utils.py
src/tensor_decomposition/: checkpoints.py  device_utils.py
src/tensor_decomposition/complex/: __init__.py  config.py  data.py  evaluation.py
src/tensor_decomposition/real/: __init__.py  config.py  data.py  evaluation.py  losses.py  model.py  utils.py
